@@ -33,6 +33,16 @@ buffer, i.e. the buffer will not be deleted in its destructor.
 Creates a new read-only memory stream, initializing it with the
 data from the given output stream \arg{stream}.
 
+\func{}{wxMemoryInputStream}{\param{wxInputStream\&}{ stream}, \param{wxFileOffset}{ len = wxInvalidOffset}}
+
+Creates a new read-only memory stream, initializing it with the
+data from the given input stream \arg{stream}.
+
+The \arg{len} argument specifies the amount of data to read from
+the \arg{stream}. Setting it to {\it wxInvalidOffset} means that
+the \arg{stream} is to be read entirely (i.e. till the EOF is reached).
+
+
 \membersection{wxMemoryInputStream::\destruct{wxMemoryInputStream}}\label{wxmemoryinputstreamdtor}
 
 \func{}{\destruct{wxMemoryInputStream}}{\void}
